# Projet07

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  prompt.py  rag.py
data/: events.json
data/faiss_index/: index.faiss  index.pkl
scripts/: build_index.py  fetch_data.py
test/: evaluate_rag.py  rag_evaluation_results.json  run_all_tests.py  test_api_endpoints.py  test_data_indexing.py  test_performance_metrics.py  test_questions.json  test_rag_unit_rules.py  test_report.md
