[project]
name = "projet07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "mistralai>=2.2.0",
    "numpy>=2.4.3",
    "ragas>=0.4.3",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "tdqm>=0.0.1",
    "uvicorn>=0.42.0",
]
